--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,4 +55,4 @@ jobs:
           cd UalaAccounting.infra
           cd terraform
           terraform init
-          terraform destroy -var='mambu_apikey=${{ secrets.MAMBU_APIKEY }}' -var='image_url=${{ env.IMAGE_URI }}' --auto-approve=true
+          terraform apply -var='mambu_apikey=${{ secrets.MAMBU_APIKEY }}' -var='image_url=${{ env.IMAGE_URI }}' --auto-approve=true
