--- a/.github/workflows/mysql_scripts.yml
+++ b/.github/workflows/mysql_scripts.yml
@@ -1,4 +1,4 @@
-name: DUMP_DDL_DATA_TO_RDS
+name: DB DDL AND INITIAL SETUP
 
 on:
   pull_request:
@@ -11,34 +11,19 @@ on:
 
 jobs:
   run-mysql-scripts:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up AWS CLI
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-
-    - name: Wait for RDS to be ready
-      run: |
-        for i in {1..30}; do
-          if mysqladmin ping -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" --silent; then
-            echo "RDS is ready!"
-            break
-          fi
-          echo "Waiting for RDS..."
-          sleep 2
-        done
+      uses: actions/checkout@v3
+      
+    - name: Install MySQL Client
+      run: sudo apt-get update && sudo apt-get install -y mysql-client
+        
     - name: Run MySQL scripts
       run: |
-        for script in UalaAccounting/UalaAccounting.dll/0001 schema.sql UalaAccounting/UalaAccounting.dll/0001 insert setup.sql; do
-          mysql -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD}}" "${{ secrets.DB_NAME }}" < "$script"
-        done        
+        mysql -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD}}" "${{ secrets.DB_NAME }}" < "UalaAccounting/UalaAccounting.ddl/0001 schema.sql"
+        mysql -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD}}" "${{ secrets.DB_NAME }}" < "UalaAccounting/UalaAccounting.setup/0001 insert setup.sql"
     - name: Clean up
       run: |
         echo "Cleaning up..."
