--- a/.github/workflows/sql_scripts_self_hosted_runner.yml
+++ b/.github/workflows/sql_scripts_self_hosted_runner.yml
@@ -39,8 +39,8 @@ jobs:
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
     steps:
       
-    - name: Install MySQL Client
-      run: sudo apt-get update && sudo apt-get install -y mysql-client
+    #- name: Install MySQL Client
+    #  run: sudo apt-get update && sudo apt-get install -y mysql-client
 
     - name: Checkout code
       uses: actions/checkout@v2      
