--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,7 +55,7 @@ jobs:
           service_status=$(aws ecs describe-services --cluster ${{ vars.ECS_CLUSTER }} --services ${{ vars.ECS_SERVICE }} --query "services[0].status" --output text)
           if [ "$service_status" != "ACTIVE" ]; then
             echo "ECS service is not running. Will not redeploy container."
-            echo steps.check-service.outcome
+            echo ${{ steps.check-service.outcome }}
             exit 1
           fi
           
